# Trading-Dashboard

./: CNAME  index.html  repomix-output.xml
ugt-terminal/: .env.example  .gitignore  STATUS.md  docker-compose.yml  start_terminal.sh
ugt-terminal/api/: Dockerfile  package-lock.json  package.json  tsconfig.json
ugt-terminal/worker-broker/: Dockerfile  pyproject.toml
ugt-terminal/worker-broker/src/: main.py
ugt-terminal/worker-broker/src/crypto/: decryptor.py
ugt-terminal/worker-broker/src/market/: binance_ws.py  coinbase_ws.py
ugt-terminal/worker-broker/src/pac/: alerts.py  engine.py
ugt-terminal/worker-broker/src/portfolio/: binance_account.py  coinbase_account.py  csv_handlers.py  ibkr.py  robinhood.py  youhodler.py
ugt-terminal/worker-data/: Dockerfile  pyproject.toml
ugt-terminal/worker-data/config/: dune_queries.yaml
ugt-terminal/worker-data/src/: base.py  main.py  scheduler.py
ugt-terminal/worker-data/src/clients/: coinmarketcap.py  defillama.py  dexscreener.py  dune.py  fred.py  messari.py  tradingeconomics.py
ugt-terminal/worker-data/src/scrapers/: arkham.py  forexfactory.py  glassnode.py  macromicro.py
ugt-terminal/worker-data/src/sinks/: redis_stream.py  timescale.py
ugt-terminal/worker-data/tests/: test_normalization.py
ugt-terminal/worker-data/tests/fixtures/: arkham.json  coinmarketcap.json  defillama.json  dexscreener.json  dune.json  forexfactory.json  fred.json  glassnode.json  macromicro.json  messari.json  tradingeconomics.json
ugt-terminal/worker-nlp/: Dockerfile  pyproject.toml
ugt-terminal/worker-nlp/src/: main.py  scheduler.py
ugt-terminal/worker-nlp/src/ingestors/: cryptopanic.py  rss_generic.py  scrape_fallback.py
ugt-terminal/worker-nlp/src/nlp/: cryptobert.py  finbert.py  ticker_ner.py  zscore.py
ugt-terminal/worker-nlp/src/sinks/: redis_stream.py  timescale.py
ugt-terminal/worker-nlp/tests/: test_nlp_pipeline.py
ugt-terminal/worker-nlp/tests/fixtures/: cryptopanic.json
(+34 files in other folders)
